# os-tester

./: .pre-commit-config.yaml  .prettierrc  .pylintrc  README.md  pyproject.toml  requirements.txt  setup.cfg  stages_schema.yml
.github/workflows/: ci.yml
examples/stages/: stages.yml
src/os_tester/: debugPlot.py  debug_plot.py  stages.py  vm.py
tests/: test_image_compare.py  test_stages_parsing.py
